# ENGR102_Starship_Proj

./: README.md  pyproject.toml
src/engr102_starship_proj/: data.json  main.py  station_power_input
src/engr102_starship_proj/engr102_starship_problems/Dataset 1/: dry_mass_in_kg_pv.xlsx  dry_mass_in_kg_std.xlsx  payload_in_kg.xlsx  payload_volume_pv.xlsx  payload_volume_std.xlsx  power_consumptions_pv.xlsx  power_consumptions_std.xlsx  power_input_pv.xlsx  power_input_std.xlsx  temps_in_C.xlsx  uv_index.xlsx
src/engr102_starship_proj/engr102_starship_problems/Dataset 2/: dry_mass_in_kg_pv.xlsx  dry_mass_in_kg_std.xlsx  payload_in_kg.xlsx  payload_volume_pv.xlsx  payload_volume_std.xlsx  power_consumptions_pv.xlsx  power_consumptions_std.xlsx  power_input_pv.xlsx  power_input_std.xlsx  temps_in_C.xlsx  uv_index.xlsx
src/engr102_starship_proj/engr102_starship_problems/Dataset 3/: dry_mass_in_kg_pv.xlsx  dry_mass_in_kg_std.xlsx  payload_in_kg.xlsx  payload_volume_pv.xlsx  payload_volume_std.xlsx  power_consumptions_pv.xlsx  power_consumptions_std.xlsx  power_input_pv.xlsx  power_input_std.xlsx  temps_in_C.xlsx  uv_index.xlsx
src/engr102_starship_proj/engr102_starship_problems/Dataset 4/: dry_mass_in_kg_pv.xlsx  dry_mass_in_kg_std.xlsx  payload_in_kg.xlsx  payload_volume_pv.xlsx  payload_volume_std.xlsx  power_consumptions_pv.xlsx  power_consumptions_std.xlsx  power_input_pv.xlsx  power_input_std.xlsx  temps_in_C.xlsx  uv_index.xlsx
