[project]
name = "engr102-starship-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "entl210",email = "edwardlamhitech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "engr102_starship_proj", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
